--- a/css/public.less
+++ b/css/public.less
@@ -6,45 +6,165 @@
 // 5 样式属性书写顺序 
 // 这几个尽量靠前 position\top,left\display\width,height\z-index
 // 这几个尽量靠后 color\background\font-size
+
+@menuw1 : 214px;
+@menuw2 : 76px;
+@speed : 300ms;
+@red : #d02b1e;
 html,body{
 	height:100%;
+	min-height:600px;
 	overflow: hidden;
 }
-.topbar{
-	position: absolute;
-	top:0;left:0;
-	padding-left: 76px;
-	z-index:5;
-	.myfavorite,.username{
-		display: inline-block;
-		height:100%;
-		line-height: 64px;
-	}
-	.changetheme{
-		display: inline-block;
-		height:32px;
-		width:32px;
-		border-radius: 16px;
-		text-align: center;
-		line-height: 32px;
-		background-color: #189cbb;
-	}
-	.username{
-
-	}
+.menu{
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;
 }
-.leftbar{
-	position:absolute;
-	left:0;top:0;
-	width:76px;
-	height:100%;
-	background-color: #281414;
-	z-index:6;
-	&>img{
+body{
+	.topbar{
 		position: absolute;
-		left:0;top:0;
-		display: block;
+		top:0;left:0;
 		height:64px;
 		width:100%;
+		padding-left: @menuw1 + 25px;
+		z-index:5;
+		// transition: padding @speed ease;
+		// -webkit-transition: padding @speed ease;
+		.menutoggle{
+			display: inline-block;
+			width: 18px;
+			height: 18px;
+			background-color: #d00;
+		}
+		.myfavorite,.username{
+			display: inline-block;
+			height:100%;
+			line-height: 64px;
+		}
+		.changetheme{
+			position: absolute;
+			right:130px;
+			top:16px;
+			display: inline-block;
+			height:32px;
+			width:32px;
+			border-radius: 16px;
+			text-align: center;
+			line-height: 32px;
+			background-color: #189cbb;
+		}
+		.username{
+			position:absolute;
+			right:50px;
+			top:0;
+		}
+	}
+	.leftbar{
+		position:absolute;
+		left:0;top:0;
+		width:@menuw1;
+		height:100%;
+		background-color: #281414;
+		z-index:6;
+		&>img{
+			position: absolute;
+			left:0;top:0;
+			display: block;
+			height:64px;
+			width:100%;
+		}
+		&>.menu{
+			width:100%;
+			padding-top: 64px;
+			overflow-y: scroll;
+			height: auto;
+			max-height: 100%;
+			color:#e8e8e8;
+			&>li{
+				height:44px;
+				margin:8px 0;
+				width:100%;
+				overflow: hidden;
+				cursor:pointer;
+				&>a{
+					display: block;
+					height:44px;
+					width:100%;
+					line-height: 44px;
+					padding-left: 20px;
+				}
+				&>.submenu{
+					height:auto;
+					width:100%;
+					padding-left: 60px;
+					&>li{
+						width:100%;
+						height:35px;
+						line-height: 35px;
+						cursor:pointer;
+					}
+				}
+			}
+			&>li.set{
+				&>a{
+					background-color: @red;
+				}
+				&>.submenu{
+				}
+			}
+		}
+	}
+	.content{
+		width:100%;
+		height:100%;
+		position: relative;
+		padding-left: @menuw1+25px;
+		padding-top: 64px;
+		padding-right: 50px;
+		padding-bottom: 25px;
+	}
+}
+body.menuclose{
+	.topbar{
+		padding-left: @menuw2+25px;
+	}
+	.leftbar{
+		position:absolute;
+		left:0;top:0;
+		width:@menuw2;
+		&>.menu{
+			width:100%;
+			padding-top: 64px;
+			overflow-y: scroll;
+			height: auto;
+			max-height: 100%;
+			color:#e8e8e8;
+			&>li{
+				
+				&>a{
+					display: none;
+				}
+				&>.submenu{
+					height:auto;
+					width:100%;
+					padding-left: 60px;
+					&>li{
+						width:100%;
+						height:35px;
+						line-height: 35px;
+						cursor:pointer;
+					}
+				}
+			}
+			&>li.set{
+				&>a{
+					background-color: @red;
+				}
+				&>.submenu{
+				}
+			}
+		}
 	}
 }
