--- a/css/public.css
+++ b/css/public.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  min-height: 600px;
+  min-height: 650px;
   overflow: hidden;
 }
 .menu {
@@ -122,7 +122,7 @@ body .content {
   width: 100%;
   height: 100%;
   position: relative;
-  padding-left: 239px;
+  padding-left: 219px;
   padding-top: 64px;
   padding-right: 50px;
   padding-bottom: 25px;
@@ -160,4 +160,170 @@ body.menuclose .leftbar > .menu > li > .submenu > li {
 }
 body.menuclose .leftbar > .menu > li.set > a {
   background-color: #d02b1e;
+}
+.one-third {
+  width: 33.3%;
+}
+.two-third {
+  width: 66.6%;
+}
+.content .contitem {
+  height: 50%;
+  float: left;
+  padding-left: 20px;
+}
+.content .contitem .taskContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+.content .contitem .taskContainer .title {
+  width: 100%;
+  height: 36px;
+  line-height: 36px;
+  padding-left: 15px;
+  color: #fff;
+  background-color: #eb1e25;
+  font-size: 14px;
+  font-weight: normal;
+}
+.content .contitem .taskContainer .itembox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 46px 10px 10px;
+}
+.content .contitem .taskContainer .itembox .item {
+  float: left;
+  width: 27.3%;
+  height: 65px;
+  line-height: 65px;
+  margin: 10px 3%;
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: #fdbd15;
+  position: relative;
+}
+.content .contitem .taskContainer .itembox .item.newMsg::before {
+  content: attr(data-num);
+  display: block;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 50%;
+  border: 2px #fff solid;
+  text-align: center;
+  color: #fff;
+  font-size: 12px;
+  position: absolute;
+  right: -10px;
+  top: -10px;
+  background-color: #ed2621;
+}
+.content .contitem .taskContainer .itembox #am {
+  background-color: #f6664b;
+}
+.content .contitem .documentContainer {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+.content .contitem .documentContainer .title {
+  width: 100%;
+  background-color: #482625;
+  padding: 15px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: normal;
+}
+.content .contitem .documentContainer ul {
+  /*padding: 20px 30px;*/
+  width: 100%;
+  margin: 20px auto;
+}
+.content .contitem .documentContainer ul > li {
+  position: relative;
+  display: block;
+  width: 100%;
+  /*height: 60px;*/
+  margin-bottom: 20px;
+}
+.content .contitem .documentContainer ul > li > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.content .contitem .documentContainer ul > li > a img {
+  position: absolute;
+  top: 5px;
+}
+.content .contitem .documentContainer ul > li > a h6 {
+  margin-left: 50px;
+  font-size: 13px;
+}
+.content .contitem .documentContainer ul > li > a p {
+  margin-left: 50px;
+  font-size: 12px;
+}
+.content .contitem .scheduleContainer {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(223, 0, 0, 0.8);
+}
+.content .contitem .scheduleContainer .title {
+  padding: 20px;
+  padding-bottom: 0;
+  width: 100%;
+  position: relative;
+}
+.content .contitem .scheduleContainer .title img {
+  position: absolute;
+  right: 20px;
+}
+.content .contitem .scheduleContainer .title strong {
+  display: block;
+  color: #fff;
+  font-size: 22px;
+  font-weight: normal;
+}
+.content .contitem .scheduleContainer .title span {
+  display: block;
+  color: #fff;
+  font-size: 15px;
+}
+.content .contitem .scheduleContainer ul {
+  width: 90%;
+  margin: 0 auto;
+}
+.content .contitem .scheduleContainer ul li {
+  display: block;
+  width: 100%;
+  border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
+}
+.content .contitem .scheduleContainer ul li:last-of-type {
+  border-bottom: none;
+}
+.content .contitem .scheduleContainer ul li a {
+  display: block;
+  width: 100%;
+  height: 50px;
+  line-height: 20px;
+  padding: 15px 0;
+  color: #fff;
+  font-size: 14px;
+}
+.content .contitem .scheduleContainer ul li a span {
+  background-color: #ffc72c;
+  display: block;
+  float: right;
+  width: 45px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 10px;
 }
