--- a/css/public.less
+++ b/css/public.less
@@ -13,7 +13,7 @@
 @red : #d02b1e;
 html,body{
 	height:100%;
-	min-height:600px;
+	min-height:650px;
 	overflow: hidden;
 }
 .menu{
@@ -143,7 +143,7 @@ body{
 		width:100%;
 		height:100%;
 		position: relative;
-		padding-left: @menuw1+25px;
+		padding-left: @menuw1+5px;
 		padding-top: 64px;
 		padding-right: 50px;
 		padding-bottom: 25px;
@@ -186,6 +186,175 @@ body.menuclose{
 					background-color: @red;
 				}
 				&>.submenu{
+				}
+			}
+		}
+	}
+}
+.one-third{
+	width:33.3%;
+}
+.two-third{
+	width:66.6%;
+}
+.content{
+	.contitem{
+		height:50%;
+		float: left;
+		padding-left:20px;
+		.taskContainer{
+			position: relative;
+			width: 100%;
+			height: 100%;
+			background-color: #fff;
+			.title{
+				width: 100%;
+				height:36px;
+				line-height: 36px;
+				padding-left: 15px;
+				color: #fff;
+				background-color: #eb1e25;
+				font-size: 14px;
+				font-weight: normal;
+			}
+			.itembox{
+				position:absolute;
+				top:0;
+				left:0;
+				width:100%;
+				padding:46px 10px 10px;
+				.item{
+					float: left;
+					width: 27.3%;
+					height: 65px;
+					line-height: 65px;
+					margin:10px 3%;
+					text-align: center;
+					color: #fff;
+					font-size: 20px;
+					border-radius: 5px;
+					background-color: #fdbd15;
+					position: relative;
+					&.newMsg::before{
+						content: attr(data-num);
+						display:block;
+						width: 20px;
+						height: 20px;
+						line-height: 20px;
+						border-radius: 50%;
+						border:2px #fff solid;
+						text-align: center;
+						color: #fff;
+						font-size: 12px;
+						position: absolute;
+						right: -10px;
+						top:-10px;
+						background-color: #ed2621;
+					}
+				}
+				#am{
+					background-color: #f6664b;
+				}
+			}
+			
+		}
+		.documentContainer{
+			width: 100%;
+			height: 100%;
+			background-color: #fff;
+			.title{
+				width: 100%;
+				background-color: #482625;
+				padding: 15px;
+				color: #fff;
+				font-size: 14px;
+				font-weight: normal;
+			}
+			ul{
+				/*padding: 20px 30px;*/
+				width: 100%;
+				margin: 20px auto;
+				&>li{
+					position: relative;
+					display: block;
+					width:100%;
+					/*height: 60px;*/
+					margin-bottom: 20px;
+					&>a{
+						display: block;
+						width:100%;
+						height:100%;
+						img{
+							position: absolute;
+							top: 5px;
+						}
+						h6{
+							margin-left: 50px;
+							font-size: 13px;
+						}
+						p{
+							margin-left: 50px;
+							font-size: 12px;
+						}
+					}
+				}
+			}
+		}
+		.scheduleContainer{
+			width: 100%;
+			height: 100%;
+			background-color: rgba(223,0,0,0.8);
+			.title{
+				padding: 20px;
+				padding-bottom: 0;
+				width: 100%;
+				position: relative;
+				img{
+					position: absolute;
+					right: 20px;
+				}
+				strong{
+					display: block;
+					color: #fff;
+					font-size: 22px;
+					font-weight: normal;
+				}
+				span{
+					display: block;
+					color: #fff;
+					font-size: 15px;
+				}
+			}
+			ul{
+				width: 90%;
+				margin: 0 auto;
+				li{
+					display: block;
+					width: 100%;
+					border-bottom: 1px rgba(255,255,255,0.2) solid;
+					&:last-of-type{
+						border-bottom: none;
+					}
+					a{
+						display: block;
+						width: 100%;
+						height: 50px;
+						line-height: 20px;
+						padding: 15px 0;
+						color: #fff;
+						font-size: 14px;
+						span{
+							background-color: #ffc72c;
+							display: block;
+							float: right;
+							width: 45px;
+							height: 20px;
+							line-height: 20px;
+							text-align: center;
+							font-size: 12px;
+							border-radius: 10px;
+						}
+					}
 				}
 			}
 		}
