--- a/css/public.less
+++ b/css/public.less
@@ -41,9 +41,43 @@ body{
 			background-color: #d00;
 		}
 		.myfavorite,.username{
+			position: relative;
 			display: inline-block;
 			height:32px;
 			line-height: 32px;
+			.alertpanel{
+				display: none;
+				position:absolute;
+				width:510px;
+				height:270px;
+				bottom:-270px;
+				left:0;
+				background-color: #fff;
+				padding: 15px;
+				font-size: 12px;
+				border: 1px solid #ddd;
+				box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
+				.linkbox{
+					width:33%;
+					height:100%;
+					float: left;
+					.linkitem{
+						width:100%;
+						line-height: 20px;
+						height:40px;
+						padding:10px 20px 10px 10px;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+					}
+				}
+				.addbtn{
+					position:absolute;
+					right:20px;
+					bottom:15px;
+					color:#ee4f3c;
+				}
+			}
 		}
 		.topright{
 			float: right;
@@ -190,6 +224,9 @@ body.menuclose{
 			}
 		}
 	}
+	.content{
+		padding-left: @menuw2+5px;
+	}
 }
 .one-third{
 	width:33.3%;
@@ -203,60 +240,69 @@ body.menuclose{
 		float: left;
 		padding-left:20px;
 		.taskContainer{
-			position: relative;
 			width: 100%;
 			height: 100%;
 			background-color: #fff;
+			position: relative;
+			padding-top: 45px;
+			&>div{
+				width: 100%;
+				height: 100%;
+				padding: 15px;
+				&>div{
+					width: 33%;
+					height: 33%;
+					padding: 10px;
+					float: left;
+				}
+			}
 			.title{
 				width: 100%;
-				height:36px;
-				line-height: 36px;
-				padding-left: 15px;
-				color: #fff;
 				background-color: #eb1e25;
+				padding-left: 15px;
+				height: 45px;
+				line-height: 45px;
+				color: #fff;
 				font-size: 14px;
 				font-weight: normal;
+				position: absolute;
+				top: 0;
 			}
-			.itembox{
-				position:absolute;
-				top:0;
-				left:0;
-				width:100%;
-				padding:46px 10px 10px;
-				.item{
-					float: left;
-					width: 27.3%;
-					height: 65px;
-					line-height: 65px;
-					margin:10px 3%;
+			.item{
+				width: 100%;
+				height: 100%;
+				text-align: center;
+				color: #fff;
+				font-size: 20px;
+				border-radius: 5px;
+				background-color: #fdbd15;
+				position: relative;
+				cursor: pointer;
+				display: table;
+				&>span{
+					display: table-cell;
+					vertical-align: middle;
+				}
+				&.newMsg::before{
+					content: attr(data-num);
+					display:block;
+					width: 20px;
+					height: 20px;
+					line-height: 20px;
+					border-radius: 50%;
+					border:2px #fff solid;
 					text-align: center;
 					color: #fff;
-					font-size: 20px;
-					border-radius: 5px;
-					background-color: #fdbd15;
-					position: relative;
-					&.newMsg::before{
-						content: attr(data-num);
-						display:block;
-						width: 20px;
-						height: 20px;
-						line-height: 20px;
-						border-radius: 50%;
-						border:2px #fff solid;
-						text-align: center;
-						color: #fff;
-						font-size: 12px;
-						position: absolute;
-						right: -10px;
-						top:-10px;
-						background-color: #ed2621;
-					}
-				}
-				#am{
-					background-color: #f6664b;
+					font-size: 12px;
+					position: absolute;
+					right: -10px;
+					top:-10px;
+					background-color: #ed2621;
 				}
 			}
-			
+			#am{
+				background-color: #f6664b;
+			}
 		}
 		.documentContainer{
 			width: 100%;
