--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-body{
+html,body{
 	background-color: #eee;
+	height: 100%;
 }
 .aaaa{
-	height:330px;
+	height:70%;
 	width:350px;
 	float: left;
 	margin-right: 30px;
@@ -15,29 +16,48 @@ body{
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
+	padding-top: 45px;
+	position: relative;
 }
 .documentContainer .title{
 	width: 100%;
 	background-color: #482625;
-	padding: 15px;
+	padding-left: 15px;
+	height: 45px;
+	line-height: 45px;
 	color: #fff;
 	font-size: 14px;
 	font-weight: normal;
+	position: absolute;
+	top: 0;
+
+}
+.documentContainer .listContainer{
+	width: 100%;
+	height: 100%;
+	padding: 20px 30px;
+	overflow: hidden;
 }
 .documentContainer ul{
 	/*padding: 20px 30px;*/
-	width: 290px;
-	margin: 20px auto;
+	width: 100%;
+	height: 100%;
 }
 .documentContainer li{
 	position: relative;
-	display: block;
-	/*height: 60px;*/
-	margin-bottom: 20px;
+	display: table;
+	width: 100%;
+	height: 25%;
+	min-height: 56px;
+	max-height: 80px;
+}
+.documentContainer li a{
+	display: table-cell;
+	vertical-align: middle;
+	position: relative;
 }
 .documentContainer li img{
 	position: absolute;
-	top: 5px;
 }
 .documentContainer li h6{
 	margin-left: 50px;
@@ -53,12 +73,15 @@ body{
 	width: 100%;
 	height: 100%;
 	background-color: rgba(223,0,0,0.8);
+	padding-top: 63px;
+	position: relative;
 }
 .scheduleContainer .title{
 	padding: 20px;
 	padding-bottom: 0;
 	width: 100%;
-	position: relative;
+	position: absolute;
+	top: 0;
 }
 .scheduleContainer .title img{
 	position: absolute;
@@ -75,24 +98,34 @@ body{
 	color: #fff;
 	font-size: 15px;
 }
+.scheduleContainer .listContainer{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
+}
 .scheduleContainer ul{
 	width: 90%;
+	height: 100%;
 	margin: 0 auto;
 }
 .scheduleContainer li{
-	display: block;
+	display: table;
 	width: 100%;
+	height: 20%;
+	min-height:40px;
+	max-height:70px;
 	border-bottom: 1px #da6e70 solid;
 }
 .scheduleContainer li:last-of-type{
 	border-bottom: none;
 }
 .scheduleContainer li a{
-	display: block;
+	display: table-cell;
+	vertical-align: middle;
 	width: 100%;
-	height: 50px;
+	height: 20px;
 	line-height: 20px;
-	padding: 15px 0;
 	color: #fff;
 	font-size: 14px;
 }
