--- a/css/public.css
+++ b/css/public.css
@@ -4,7 +4,8 @@ body {
   min-height: 650px;
   overflow: hidden;
 }
-.menu {
+.menu,
+.topbar {
   -webkit-user-select: none;
   /* Chrome all / Safari all */
   -moz-user-select: none;
@@ -36,12 +37,16 @@ body .topbar .username {
   display: inline-block;
   height: 32px;
   line-height: 32px;
+  cursor: pointer;
 }
-body .topbar .myfavorite .alertpanel,
-body .topbar .username .alertpanel {
+body .topbar .myfavorite.open .alertpanel,
+body .topbar .username.open .alertpanel {
+  display: block;
+}
+body .topbar .alertpanel {
   display: none;
   position: absolute;
-  width: 510px;
+  width: auto;
   height: 270px;
   bottom: -270px;
   left: 0;
@@ -51,14 +56,12 @@ body .topbar .username .alertpanel {
   border: 1px solid #ddd;
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.1);
 }
-body .topbar .myfavorite .alertpanel .linkbox,
-body .topbar .username .alertpanel .linkbox {
-  width: 33%;
+body .topbar .alertpanel .linkbox {
+  width: 159px;
   height: 100%;
   float: left;
 }
-body .topbar .myfavorite .alertpanel .linkbox .linkitem,
-body .topbar .username .alertpanel .linkbox .linkitem {
+body .topbar .alertpanel .linkbox .linkitem {
   width: 100%;
   line-height: 20px;
   height: 40px;
@@ -67,8 +70,7 @@ body .topbar .username .alertpanel .linkbox .linkitem {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-body .topbar .myfavorite .alertpanel .addbtn,
-body .topbar .username .alertpanel .addbtn {
+body .topbar .alertpanel .addbtn {
   position: absolute;
   right: 20px;
   bottom: 15px;
@@ -213,12 +215,101 @@ body.menuclose .content {
   float: left;
   padding-left: 20px;
 }
-.content .contitem .taskContainer {
+.content .contitem#newsblock,
+.content .contitem#taskblock {
+  padding-bottom: 10px;
+}
+.content .contitem#documentblock,
+.content .contitem#scheduleblock {
+  padding-top: 10px;
+}
+.content .contitem .newsContainer,
+.content .contitem .taskContainer,
+.content .contitem .documentContainer,
+.content .contitem .scheduleContainer {
+  position: relative;
   width: 100%;
   height: 100%;
   background-color: #fff;
+}
+.content .contitem .newsContainer .title,
+.content .contitem .taskContainer .title,
+.content .contitem .documentContainer .title,
+.content .contitem .scheduleContainer .title {
+  font-weight: normal;
+  color: #fff;
+  font-size: 14px;
+}
+.content .contitem .newsContainer > .btngroup {
+  width: 100%;
+  height: 35px;
+  background-color: #482625;
+  color: #fff;
+}
+.content .contitem .newsContainer > .btngroup .title {
+  float: left;
+  height: 100%;
+  width: 50%;
+  max-width: 210px;
+  font-size: 14px;
+  line-height: 35px;
+  text-align: center;
+}
+.content .contitem .newsContainer > .btngroup .title.set {
+  background-color: #eb1e25;
+}
+.content .contitem .newsContainer > .cont {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  padding-top: 35px;
+}
+.content .contitem .newsContainer > .cont .banner {
+  float: left;
+  width: 50%;
+  height: 100%;
+  max-width: 360px;
+}
+.content .contitem .newsContainer > .cont .banner img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.content .contitem .newsContainer > .cont .news {
+  float: left;
+  width: 50%;
+  height: 100%;
+  padding: 5px 0;
+}
+.content .contitem .newsContainer > .cont .news > .cont {
   position: relative;
-  padding-top: 45px;
+  width: 70%;
+  height: 100%;
+  min-width: 230px;
+  margin: 0 auto;
+  padding-top: 40px;
+}
+.content .contitem .newsContainer > .cont .news > .cont h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #f97c11;
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  font-weight: normal;
+}
+.content .contitem .newsContainer > .cont .news > .cont > .cont {
+  width: 100%;
+  height: 100%;
+}
+.content .contitem .newsContainer > .cont .news > .cont > .cont .item {
+  height: 33.3%;
+}
+.content .contitem .taskContainer {
+  padding-top: 35px;
 }
 .content .contitem .taskContainer > div {
   width: 100%;
@@ -235,11 +326,8 @@ body.menuclose .content {
   width: 100%;
   background-color: #eb1e25;
   padding-left: 15px;
-  height: 45px;
-  line-height: 45px;
-  color: #fff;
-  font-size: 14px;
-  font-weight: normal;
+  height: 35px;
+  line-height: 35px;
   position: absolute;
   top: 0;
 }
@@ -278,18 +366,10 @@ body.menuclose .content {
 .content .contitem .taskContainer #am {
   background-color: #f6664b;
 }
-.content .contitem .documentContainer {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-}
 .content .contitem .documentContainer .title {
   width: 100%;
   background-color: #482625;
   padding: 15px;
-  color: #fff;
-  font-size: 14px;
-  font-weight: normal;
 }
 .content .contitem .documentContainer ul {
   /*padding: 20px 30px;*/
@@ -321,8 +401,6 @@ body.menuclose .content {
   font-size: 12px;
 }
 .content .contitem .scheduleContainer {
-  width: 100%;
-  height: 100%;
   background-color: rgba(223, 0, 0, 0.8);
 }
 .content .contitem .scheduleContainer .title {
