--- a/css/public.less
+++ b/css/public.less
@@ -16,7 +16,7 @@ html,body{
 	min-height:650px;
 	overflow: hidden;
 }
-.menu{
+.menu,.topbar{
 	-webkit-user-select: none;  /* Chrome all / Safari all */
 	-moz-user-select: none;     /* Firefox all */
 	-ms-user-select: none;      /* IE 10+ */
@@ -45,47 +45,50 @@ body{
 			display: inline-block;
 			height:32px;
 			line-height: 32px;
-			.alertpanel{
-				display: none;
+			cursor:pointer;
+			&.open{
+				.alertpanel{
+					display: block;
+				}
+			}
+		}
+		.alertpanel{
+			display: none;
+			position:absolute;
+			width:auto;
+			height:270px;
+			bottom:-270px;
+			left:0;
+			background-color: #fff;
+			padding: 15px;
+			font-size: 12px;
+			border: 1px solid #ddd;
+			box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
+			.linkbox{
+				width:159px;
+				height:100%;
+				float: left;
+				.linkitem{
+					width:100%;
+					line-height: 20px;
+					height:40px;
+					padding:10px 20px 10px 10px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+				}
+			}
+			.addbtn{
 				position:absolute;
-				width:510px;
-				height:270px;
-				bottom:-270px;
-				left:0;
-				background-color: #fff;
-				padding: 15px;
-				font-size: 12px;
-				border: 1px solid #ddd;
-				box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
-				.linkbox{
-					width:33%;
-					height:100%;
-					float: left;
-					.linkitem{
-						width:100%;
-						line-height: 20px;
-						height:40px;
-						padding:10px 20px 10px 10px;
-						overflow: hidden;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-					}
-				}
-				.addbtn{
-					position:absolute;
-					right:20px;
-					bottom:15px;
-					color:#ee4f3c;
-				}
+				right:20px;
+				bottom:15px;
+				color:#ee4f3c;
 			}
 		}
 		.topright{
 			float: right;
 			height:64px;
 			.changetheme{
-				// position: absolute;
-				// right:150px;
-				// top:16px;
 				display: inline-block;
 				height:32px;
 				width:32px;
@@ -95,9 +98,6 @@ body{
 				background-color: #189cbb;
 			}
 			.username{
-				// position:absolute;
-				// right:50px;
-				// top:16px;
 				position: relative;
 				margin-left:10px;
 				margin-right:20px;
@@ -116,7 +116,6 @@ body{
 				}
 			}
 		}
-		
 	}
 	.leftbar{
 		position:absolute;
@@ -239,12 +238,95 @@ body.menuclose{
 		height:50%;
 		float: left;
 		padding-left:20px;
-		.taskContainer{
+		&#newsblock,&#taskblock{
+			padding-bottom: 10px;
+		}
+		&#documentblock,&#scheduleblock{
+			padding-top: 10px;
+		}
+		.newsContainer,.taskContainer,.documentContainer,.scheduleContainer{
+			position: relative;
 			width: 100%;
 			height: 100%;
 			background-color: #fff;
-			position: relative;
-			padding-top: 45px;
+			.title{
+				font-weight: normal;
+				color: #fff;
+				font-size: 14px;
+			}
+		}
+		.newsContainer{
+			&>.btngroup{
+				width: 100%;
+				height:35px;
+				background-color: #482625;
+				color:#fff;
+				.title{
+					float: left;
+					height: 100%;
+					width: 50%;
+					max-width:210px;
+					font-size: 14px;
+					line-height: 35px;
+					text-align: center;
+				}
+				.title.set{
+					background-color: #eb1e25;
+				}
+			}
+			&>.cont{
+				position: absolute;
+				left:0;
+				top: 0;
+				height: 100%;
+				width: 100%;
+				padding-top: 35px;
+				.banner{
+					float: left;	
+					width: 50%;
+					height: 100%;
+					max-width:360px;
+					img{
+						width: 100%;
+						height: 100%;
+						display: block;
+					}
+				}
+				.news{
+					float: left;
+					width: 50%;
+					height: 100%;
+					padding: 5px 0;
+					&>.cont{
+						position: relative;
+						width:70%;
+						height: 100%;
+						min-width: 230px;
+						margin:0 auto;
+						padding-top: 40px;
+						h1{
+							position: absolute;
+							top: 0;
+							left:0;
+							color: #f97c11;
+							height: 40px;
+							line-height: 40px;
+							font-size: 20px;
+							font-weight: normal;
+						}
+						&>.cont{
+							width: 100%;
+							height:100%;
+							.item{
+								height: 33.3%;
+							}
+						}
+					}
+				}
+			}
+		}
+		.taskContainer{
+			padding-top: 35px;
 			&>div{
 				width: 100%;
 				height: 100%;
@@ -260,11 +342,8 @@ body.menuclose{
 				width: 100%;
 				background-color: #eb1e25;
 				padding-left: 15px;
-				height: 45px;
-				line-height: 45px;
-				color: #fff;
-				font-size: 14px;
-				font-weight: normal;
+				height: 35px;
+				line-height: 35px;
 				position: absolute;
 				top: 0;
 			}
@@ -305,16 +384,10 @@ body.menuclose{
 			}
 		}
 		.documentContainer{
-			width: 100%;
-			height: 100%;
-			background-color: #fff;
 			.title{
 				width: 100%;
 				background-color: #482625;
 				padding: 15px;
-				color: #fff;
-				font-size: 14px;
-				font-weight: normal;
 			}
 			ul{
 				/*padding: 20px 30px;*/
@@ -347,8 +420,6 @@ body.menuclose{
 			}
 		}
 		.scheduleContainer{
-			width: 100%;
-			height: 100%;
 			background-color: rgba(223,0,0,0.8);
 			.title{
 				padding: 20px;
