--- a/css/public.less
+++ b/css/public.less
@@ -134,7 +134,7 @@ body{
 		&>.menu{
 			width:100%;
 			padding-top: 64px;
-			overflow-y: scroll;
+			// overflow-y: scroll;
 			height: auto;
 			max-height: 100%;
 			color:#e8e8e8;
