--- a/css/public.css
+++ b/css/public.css
@@ -13,6 +13,37 @@ body {
   /* IE 10+ */
   user-select: none;
 }
+.verticalCenter {
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+.horizontalCenter {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.veryCenter {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
 body {
   background-image: url(../img/Dashboard_bg.jpg);
   background-size: cover;
@@ -383,11 +414,6 @@ body.menuclose .content {
   background-color: #fdbd15;
   position: relative;
   cursor: pointer;
-  display: table;
-}
-.content .contitem .taskContainer .item > span {
-  display: table-cell;
-  vertical-align: middle;
 }
 .content .contitem .taskContainer .item.newMsg::before {
   content: attr(data-num);
@@ -405,8 +431,23 @@ body.menuclose .content {
   top: -10px;
   background-color: #ed2621;
 }
-.content .contitem .taskContainer #am {
+.content .contitem .taskContainer #AM {
   background-color: #f6664b;
+}
+.content .contitem .taskContainer #PMT {
+  background-color: #64C7DB;
+}
+.content .contitem .taskContainer #MGIS {
+  background-color: #46A7BC;
+}
+.content .contitem .taskContainer #IT {
+  background-color: #EF9D18;
+}
+.content .contitem .taskContainer #EMS {
+  background-color: #31BF9E;
+}
+.content .contitem .taskContainer #BIL {
+  background-color: #607DF0;
 }
 .content .contitem .documentContainer {
   padding-top: 45px;
@@ -426,12 +467,13 @@ body.menuclose .content {
 .content .contitem .documentContainer .listContainer {
   width: 100%;
   height: 100%;
-  padding: 10px 30px;
+  padding: 10px 20px;
   overflow: hidden;
 }
 .content .contitem .documentContainer ul {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .content .contitem .documentContainer ul > li {
   position: relative;
@@ -441,9 +483,7 @@ body.menuclose .content {
   max-height: 80px;
 }
 .content .contitem .documentContainer ul > li > a {
-  display: table-cell;
-  vertical-align: middle;
-  position: relative;
+  width: 100%;
 }
 .content .contitem .documentContainer ul > li > a img {
   position: absolute;
@@ -453,17 +493,22 @@ body.menuclose .content {
   font-size: 13px;
 }
 .content .contitem .documentContainer ul > li > a p {
+  height: 30px;
+  line-height: 15px;
   margin-left: 50px;
   font-size: 12px;
+  overflow: hidden;
 }
 .content .contitem .scheduleContainer {
+  padding-top: 59px;
   background-color: rgba(223, 0, 0, 0.8);
 }
 .content .contitem .scheduleContainer .title {
-  padding: 20px;
-  padding-bottom: 0;
+  position: absolute;
+  top: 0;
   width: 100%;
-  position: relative;
+  padding: 10px 15px;
+  padding-bottom: 0;
 }
 .content .contitem .scheduleContainer .title img {
   position: absolute;
@@ -480,35 +525,51 @@ body.menuclose .content {
   color: #fff;
   font-size: 15px;
 }
-.content .contitem .scheduleContainer ul {
-  width: 90%;
-  margin: 0 auto;
-}
-.content .contitem .scheduleContainer ul li {
-  display: block;
+.content .contitem .scheduleContainer .listContainer {
   width: 100%;
+  height: 100%;
+  padding: 0 15px;
+}
+.content .contitem .scheduleContainer .listContainer ul {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.content .contitem .scheduleContainer .listContainer ul li {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 20%;
+  max-height: 70px;
+  min-height: 40px;
   border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
 }
-.content .contitem .scheduleContainer ul li:last-of-type {
+.content .contitem .scheduleContainer .listContainer ul li:last-of-type {
   border-bottom: none;
 }
-.content .contitem .scheduleContainer ul li a {
+.content .contitem .scheduleContainer .listContainer ul li a {
   display: block;
+  position: relative;
   width: 100%;
-  height: 50px;
   line-height: 20px;
-  padding: 15px 0;
+  padding-right: 50px;
   color: #fff;
   font-size: 14px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-.content .contitem .scheduleContainer ul li a span {
-  background-color: #ffc72c;
+.content .contitem .scheduleContainer .listContainer ul li a span {
   display: block;
-  float: right;
+  position: absolute;
+  right: 1px;
+  top: 0;
   width: 45px;
   height: 20px;
   line-height: 20px;
   text-align: center;
+  background-color: #ffc72c;
   font-size: 12px;
   border-radius: 10px;
 }
