--- a/css/media768.less
+++ b/css/media768.less
@@ -1,25 +1,39 @@
-// 1024以下，768以上 ipad竖版布局
 @menuw1 : 214px;
-@menuw2 : 76px;
+@menuw2 : 72px;
 @speed : 300ms;
 @red : #d02b1e;
-@media(max-width:1024px) and (min-width:768px){
-	body.menuclose{
+// 1025以下，900以上 使用ipad横版布局
+@media(max-width:1025px) and (min-width:900px){
+
+}
+// 900以下，600以上 使用ipad竖版布局
+@media(max-width:900px) and (min-width:600px){
+	body{
 		.topbar{
-			padding-left: @menuw2+25px;
-		}
-		.leftbar{
-			width:@menuw2;
-			&>.menu{
-				&>li{
-					&>a{
-						display: none;
-					}
-				}
+			width: 100%;
+			height:60px;
+			padding: 0;
+			padding-left: @menuw2 !important;
+			background-color: @red;
+			&>img{
+				width: @menuw2;
+				height: 100%;
 			}
 		}
-		.content{
-			padding-left: @menuw2+5px;
+		.leftbar{
+			width: 100% !important;
+			&>.menu{
+				height: 100%;
+			}
 		}
 	}
+    body.menuclose{
+    	.leftbar{
+			height:0;
+    	}
+    }
+}
+// 600以下 使用手机布局
+@media(max-width:600px){
+
 }
