--- a/css/public.less
+++ b/css/public.less
@@ -55,7 +55,8 @@ html,body{
 body{
 	background-image: url(../img/Dashboard_bg.jpg);
 	background-size: cover;
-	background-origin: center;
+	background-position: center;
+	background-repeat: no-repeat;
 	.topbar{
 		position: absolute;
 		top:0;left:0;
@@ -71,7 +72,7 @@ body{
 			position: absolute;
 			left:0;top:0;
 			display: block;
-			height:60px;
+			height: 60px;
 			width: 72px;
 		}
 		.menutoggle{
